fixed some spacing, removed contact from menu

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -179,7 +179,6 @@ footer {
 }
 
 .headline {
-  padding-top: 1em;
   max-width: 700px;
 }
 
@@ -286,7 +285,7 @@ footer {
 
 .about-headline {
   p {
-    font-size: 1.5em;
+    font-size: 1.3em;
   }
   @include tablet {
   }
